# TRACE

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TRACE_PACKAGE_CLEANUP_COMPLETE.md  environment.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
archive/obsolete_snakefiles/: Snakefile_cached
archive/obsolete_workflow_scripts/: classify_sample_v2.py  collapse_reads.py  collapse_reads_v2.py  expand_to_samples.py  expand_to_samples_v2.py.backup
bioconda-recipe/: meta.yaml
recipe/: meta.yaml
tests/: __init__.py  test_config.py  test_core.py  test_utils.py
tests/fixtures/: test_hdr_template.fasta  test_reference.fasta
tests/wgs/: parity_clean_donor_reads.py  parity_precalling.py  test_bc1_consensus.py  test_donor_outcome.py  test_reconcile.py  test_sv_plasmid.py
trace_crispr/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
trace_crispr/analysis/: __init__.py  aggregation.py  comparison.py  plotting.py  statistics.py  types.py
trace_crispr/core/: NHEJ_CLASSIFICATION_ALGORITHM.md  __init__.py  alignment_classifier.py  cigar.py  classification.py  edit_distance_hdr.py  kmer.py  models.py  multi_ref_classifier.py  scoring.py
trace_crispr/integrations/: __init__.py  aligners.py  crispresso.py
trace_crispr/io/: __init__.py  output.py  sample_key.py  sqlite_cache.py
trace_crispr/multi_template/: __init__.py  batch_processor.py
trace_crispr/obsolete/: README.md  combinatorial_hdr.py
trace_crispr/preprocessing/: __init__.py  contamination.py  detection.py  preprocess.py  trimming.py
trace_crispr/utils/: __init__.py  barcode_templates.py  manifest.py  multi_ref_builder.py  sequence.py
trace_crispr/wgs/: __init__.py  bc1_consensus.py  donor_outcome.py  reconcile.py  sv_plasmid.py
workflow/: README.md  Snakefile  Snakefile_cached  config.yaml
workflow/scripts/: aggregate_crispresso2.py  aggregate_results.py  align_unique_sequences.py  align_unique_sequences_triple.py  alignment_cache_index.py  auto_detect_trim.py  classify_group.py  classify_per_guide_donor.py  classify_sample.py  classify_unique_sequences.py  collapse_reads.py  create_pooled_summary.py  create_unified_comparison_table.py  detect_primer_offsets.py  detect_primer_trim.py  expand_to_samples.py  extract_alignment_cache.py  extract_global_unique_seqs.py  generate_crispresso_batch_settings.py  merge_unique_sequences.py
